# Cosmos

./: .gitignore  ARCHITECTURE.md  BUILD_GUIDE.md  BUILD_WINDOWS.bat  BUILD_WINDOWS.ps1  INSTALL.md  QUICK_START.md  README.md  RELEASE_SUMMARY.md  electron-builder.yml  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
electron/: ipc-handlers.ts  main.ts  preload.ts
electron/core/: memory-manager.ts
electron/services/: auto-updater.ts  notion-service.ts  settings-store.ts
src/: App.css  App.tsx  api.ts  assets.d.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ipc.rs  main.rs
src-tauri/src/commands/: agents.rs  claude.rs  conversations.rs  greet.rs  memory.rs  mod.rs  projects.rs  tasks.rs  terminal.rs
src-tauri/src/db/: mod.rs  schema.rs  sqlite.rs
src-tauri/src/services/: agent_manager.rs  claude.rs  cli_checker.rs  mcp_manager.rs  memory_engine.rs  mod.rs  scheduler.rs  terminal.rs
src/components/: UpdateNotification.tsx
src/components/agents/: AgentPanel.css  AgentPanel.tsx  MemoryViewer.css  MemoryViewer.tsx
src/data/: mcp-server-templates.ts  mcp-servers.ts  role-definitions.ts
src/hooks/: useIpc.ts  useWorkflowDetection.ts
src/lib/: pro.ts
src/store/: useAgentStore.ts  useAppStore.ts  useConversationStore.ts  useGlobalAgentStore.ts  useGlobalMcpStore.ts  useLicenseStore.ts  useListeningAgentStore.ts  useMarketplaceStore.ts  useMcpStore.ts  useMemoryStore.ts  useNotionStore.ts  useProjectStore.ts
src/utils/: api-client.ts  markdown-parser.ts  task-sharing.ts
(+86 files in other folders)
