[package]
name = "cosmos"
version = "0.1.0"
description = "Multi-Agent Intelligence Platform for Claude Code"
authors = ["COSMOS Team"]
license = "MIT"
edition = "2021"
rust-version = "1.81"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = { version = "2.0" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
